@@ -17,16 +17,22 @@
  */
 package org.apache.hama.util;
 
+import java.io.IOException;
+import java.net.DatagramSocket;
 import java.net.InetAddress;
 import java.net.InetSocketAddress;
+import java.net.ServerSocket;
 import java.net.UnknownHostException;
+import java.util.NoSuchElementException;
 
+import org.apache.hama.Constants;
 import org.apache.mina.util.AvailablePortFinder;
 
 /**
  * NetUtils for our needs.
  */
 public class BSPNetUtils {
+  public static final int MAX_PORT_NUMBER = 65535;
 
   /**
    * Gets the canonical hostname of this machine.
@@ -78,4 +84,55 @@ public class BSPNetUtils {
         Integer.valueOf(peerAddrParts[1]));
   }
 
+  /**
+   * Checks to see if a specific port is available.
+   * 
+   * @param port the port to check for availability
+   */
+  public static boolean available(int port) {
+    if (port < Constants.DEFAULT_PEER_PORT || port > MAX_PORT_NUMBER) {
+      throw new IllegalArgumentException("Invalid start port: " + port);
+    }
+
+    ServerSocket ss = null;
+    DatagramSocket ds = null;
+    try {
+      ss = new ServerSocket(port);
+      ss.setReuseAddress(true);
+      ds = new DatagramSocket(port);
+      ds.setReuseAddress(true);
+      return true;
+    } catch (IOException e) {
+    } finally {
+      if (ds != null) {
+        ds.close();
+      }
+
+      if (ss != null) {
+        try {
+          ss.close();
+        } catch (IOException e) {
+          /* should not be thrown */
+        }
+      }
+    }
+
+    return false;
+  }
+
+  public static int getNextAvailable(int fromPort) {
+    if ((fromPort < Constants.DEFAULT_PEER_PORT)
+        || (fromPort > MAX_PORT_NUMBER)) {
+      throw new IllegalArgumentException("Invalid start port: " + fromPort);
+    }
+
+    for (int i = fromPort + 1; i <= MAX_PORT_NUMBER; i++) {
+      if (available(i)) {
+        return i;
+      }
+    }
+
+    throw new NoSuchElementException("Could not find an available port "
+        + "above " + fromPort);
+  }
 }
